--- a/vignettes/dp-mean.Rmd
+++ b/vignettes/dp-mean.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Differentially Private Mean Release"
-author: "James Honaker"
+author: "James Honaker, Thomas Brawner, and Christian Baehr"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -11,9 +11,9 @@ vignette: >
 
 Calculate Differentially Private Mean of a Vector with `mean.release`.
 
-Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. The `mean.release()` function releases the differentially private mean of a variable while guaranteeing `epsilon` differential privacy. Depending on the value of `epsilon`, a degree of noise is added to the true mean to make it differentially private.
+Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. Differentially private versions of various statistics are available in this package.  For example, the `mean.release()` function releases a mean of a variable, while adding a precise about of noise to guarantee `epsilon` differential privacy. 
 
-`epsilon` is chosen by the user and represents the degree of privacy given to each observation in the data when releasing information about the data. The epsilon value should be between zero and one, and as the value gets smaller, the level of privacy protection grows. However, greater privacy protection means more noise must be added to the true mean to achieve the desired amount of privacy. Therefore, as epsilon grows smaller, the privacy protection becomes greater, but the accuracy guarantee statistical release becomes weaker.
+The privacy loss parameter `epsilon` is chosen by the user and represents the degree of privacy preservation guaranteed to each observation in the data when releasing information. Typically this is valued between 0 and 1; as the value gets smaller, the level of privacy protection grows. However, greater privacy protection means more noise must be added to the true mean to achieve the desired amount of privacy. Therefore, as epsilon grows smaller, the privacy protection becomes greater, but the accuracy of the statistical release becomes weaker.
 
 Syntax
 ------
@@ -67,6 +67,7 @@ data <- PUMS5extract10000
 Calculating the differentially private mean of a numeric vector using `mean.release`:
 
 ```{r, eval = TRUE}
+library(PSIlence)
 private.numeric <- mean.release(x = data$income, var.type = "numeric", n = 10000, 
                              epsilon = 0.01, rng = c(-10000, 713000))
 private.numeric$release
@@ -75,6 +76,7 @@ private.numeric$release
 To calculate the mean of a logical vector instead, input a logical vector into `x` and update `var.type` and `rng`:
 
 ```{r, eval = TRUE}
+library(PSIlence)
 private.logical <- mean.release(x = data$married, var.type = "logical", n = 10000, 
                              epsilon = 0.01, rng = c(0, 1))
 private.logical$release
