--- a/vignettes/dp-mean.Rmd
+++ b/vignettes/dp-mean.Rmd
@@ -11,16 +11,18 @@ vignette: >
 
 Calculate Differentially Private Mean of a Vector with `mean.release`.
 
-Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. Differentially private versions of various statistics are available in this package.  For example, the `mean.release()` function releases a mean of a variable, while adding a precise about of noise to guarantee `epsilon` differential privacy. 
+Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. Differentially private estimates of various statistics are available in this package.  For example, the `mean.release()` function releases a mean of a variable, while adding a precise about of noise to guarantee `epsilon` differential privacy. 
 
 The privacy loss parameter `epsilon` is chosen by the user and represents the degree of privacy preservation guaranteed to each observation in the data when releasing information. Typically this is valued between 0 and 1; as the value gets smaller, the level of privacy protection grows. However, greater privacy protection means more noise must be added to the true mean to achieve the desired amount of privacy. Therefore, as epsilon grows smaller, the privacy protection becomes greater, but the accuracy of the statistical release becomes weaker.
+
+It is noteworthy the user must manually specify the number of observations, variable type, and range of the data of interest; data will only be touched at the point the estimate to be released is actually computed, and only by the function computing that estimate. This structure decreases the possibility of an unauthorized release of information. Additional parameter specification includes the desired `epsilon` value and post-processing steps the user would like to perform on the released statistic. 
 
 Syntax
 ------
 
 ```{r, eval = FALSE}
 mydata <- c(3, 12, 20, 42, 33, 65, 70, 54, 33, 45)
-private.mean <- mean.release(x = mydata, var.type = "numeric", epsilon = 0.1, n = 10, rng = c(3, 70))
+private.mean <- mean.release(x = mydata, var.type = "numeric", epsilon = 0.1, n = 10, rng = c(0, 70))
 
 mydata2 <- c(TRUE, FALSE, FALSE, TRUE, FALSE, TRUE, TRUE, TRUE)
 private.mean2 <- mean.release(x = mydata2, var.type = "logical", epsilon = 0.5, n = 8, rng = c(0, 1))
@@ -38,7 +40,7 @@ level of privacy and characteristics of the variable of interest.
    
 -  `var.type`: A character vector of length one identifying the data type
    of `x`. This field should contain either 'numeric', 'integer', or
-   'logical'.
+   'dichotomous'.
    
 -  `epsilon`: A numeric vector of length one specifying the epsilon privacy 
    parameter. Typically, this is between zero and one.
@@ -69,7 +71,7 @@ Calculating the differentially private mean of a numeric vector using `mean.rele
 ```{r, eval = TRUE}
 library(PSIlence)
 private.numeric <- mean.release(x = data$income, var.type = "numeric", n = 10000, 
-                             epsilon = 0.01, rng = c(-10000, 713000))
+                             epsilon = 0.01, rng = c(0, 750000))
 private.numeric$release
 ```
 
