--- a/vignettes/dp-mean.Rmd
+++ b/vignettes/dp-mean.Rmd
@@ -9,52 +9,71 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Calculate Differentially Private Mean of a Vector with `mean.release`.
+```{r setup, include=FALSE}
+knitr::opts_knit$set(
+        stop_on_error = 2L
+)
+knitr::opts_chunk$set(
+    fig.height = 7,
+    fig.width = 7
+)
+```
 
+Differentially Private Mean with `dpMean`
+-----------------------------------------
+
+The `dpMean` class evaluates a privacy-preserving mean of a vector of values. The class supports any vector type that can be represented numerically, meaning that it can handle the R types `numeric`, `integer`, and `logical`.
+
+<!--
 Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. Differentially private estimates of various statistics are available in this package.  For example, the `mean.release()` function releases a mean of a variable, while adding a precise about of noise to guarantee `epsilon` differential privacy. 
 
 The privacy loss parameter `epsilon` is chosen by the user and represents the degree of privacy preservation guaranteed to each observation in the data when releasing information. Typically this is valued between 0 and 1; as the value gets smaller, the level of privacy protection grows. However, greater privacy protection means more noise must be added to the true mean to achieve the desired amount of privacy. Therefore, as epsilon grows smaller, the privacy protection becomes greater, but the accuracy of the statistical release becomes weaker.
 
 It is noteworthy the user must manually specify the number of observations, variable type, and range of the data of interest; data will only be touched at the point the estimate to be released is actually computed, and only by the function computing that estimate. This structure decreases the possibility of an unauthorized release of information. Additional parameter specification includes the desired `epsilon` value and post-processing steps the user would like to perform on the released statistic. 
+-->
 
 Syntax
 ------
 
 ```{r, eval = FALSE}
 mydata <- c(3, 12, 20, 42, 33, 65, 70, 54, 33, 45)
-dp_mean <- dpMean$new(mechanism='mechanismLaplace', var.type='numeric', epsilon=0.1, n=10, rng=c(0, 70))
-dp_mean$release(mydata)
+dp.mean <- dpMean$new(mechanism='mechanismLaplace', var.type='numeric', epsilon=0.1, n=10, rng=c(0, 70))
+dp.mean$release(mydata)
 
 mydata2 <- c(TRUE, FALSE, FALSE, TRUE, FALSE, TRUE, TRUE, TRUE)
-dp_mean2 <- dpMean$new(mechanism='mechanismLaplace', var.type='logical', epsilon=0.5, n=10, rng=c(0, 1))
-dp_mean2$release(mydata2)
+dp.mean2 <- dpMean$new(mechanism='mechanismLaplace', var.type='logical', epsilon=0.5, n=10, rng=c(0, 1))
+dp.mean2$release(mydata2)
 ```
 
-Inputs
-------
+Arguments
+---------
 
-`dpMean` accepts the following arguments to specify the the desired 
-level of privacy and characteristics of the variable of interest.
+In typical usage, there are two methods to the `dpGLM` class. The `new` method, which creates an object of the class, accepts the following arguments.
 
--  `x`: The vector of data for which the differentially private mean will
-   be calculated. This data can be of type numeric, integer, or
-   logical.
-   
--  `var.type`: A character vector of length one identifying the data type
-   of `x`. This field should contain either 'numeric', 'integer', or
-   'dichotomous'.
-   
--  `epsilon`: A numeric vector of length one specifying the epsilon privacy 
-   parameter. Typically, this is between zero and one.
-   
--  `n`: A numeric vector of length one identifying the number of observations
-   in `x`. It is important the user specify the number of observations so
-   the `mean.release()` can touch the data as little as possible to ensure
-   privacy preservation.
-   
--  `rng`: A numeric vector of length two identifying the range of `x`. If this
-   vector is greater than length two, the maximum and minimum values of this vector
-   will be used.
+* `mechanism` \ Character, the class name of the mechanism used to perturb the true estimate, one of `'mechanismLaplace'` or `'mechanismBootstrap'`.
+
+* `var.type` \ Character, the type of values in the data frame that will be passed to the mechanism. Should be one of `'numeric'`, `'integer'`, or `'logical'`.
+
+* `n` \ Integer, the number of observations in the vector.
+
+* `rng` \ Numeric, a 2-tuple giving an a priori estimate of the lower and upper bounds of the vector.
+
+* `epsilon` \ Numeric, the differential privacy parameter $\epsilon$, typically taking values between 0 and 1 and reflecting the privacy cost of the query. Optional, default `NULL`. If `NULL`, the user must specify a value for `accuracy`.
+
+* `accuracy` \ Numeric, the accuracy of the query. Optional, default `NULL`. If `NULL`, the user must specify a value for `epsilon`. If `epsilon` is not `NULL`, this value is ignored and evaluated internally.
+
+* `impute.rng` \ Numeric, a 2-tuple giving a range within which missing values of the vector are imputed. Optional, default `NULL`. If `NULL`, missing values are imputed using the range provided in `rng`.
+
+* `n.boot` \ Integer, the number of bootstrap replications to perform. Optional, default `NULL`. If not `NULL`, the privacy cost `epsilon` is partitioned across `n.boot` replications and the estimates for each are returned.
+
+* `alpha` \ Numeric, the statistical significance level used in evaluating accuracy and privacy parameters. If the bootstrap is employed, `alpha` is also used to trim the release. Default `0.05`.
+
+&nbsp; 
+
+The `release` method accepts a single argument. 
+
+* `x` \ Data frame containing numeric columns corresponding the names specified in `formula`.
+
 
 Examples
 ------
