--- a/vignettes/dp-mean.Rmd
+++ b/vignettes/dp-mean.Rmd
@@ -37,16 +37,18 @@ Syntax
 
 ```{r, eval = FALSE}
 x1 <- c(3, 12, 20, 42, 33, 65, 70, 54, 33, 45)
-x2 <- c(TRUE, FALSE, FALSE, TRUE, FALSE, TRUE, TRUE, TRUE)
+x2 <- c(TRUE, FALSE, FALSE, TRUE, FALSE, TRUE, TRUE, TRUE, FALSE, TRUE)
 data <- data.frame(x1, x2)
 
 dp.mean <- dpMean$new(mechanism='mechanismLaplace', var.type='numeric', 
-                      variable='x1', epsilon=0.1, n=10, rng=c(0, 70))
-dp.mean$release(data)
+                      variable='x1', epsilon=10, n=10, rng=c(0, 70))
+out1 <- dp.mean$release(data)
+print(out1)
 
 dp.mean2 <- dpMean$new(mechanism='mechanismLaplace', var.type='logical', 
                        variable='x2', epsilon=0.1, n=10, rng=c(0, 1))
-dp.mean2$release(data)
+out2 <- dp.mean2$release(data)
+print(out2)
 ```
 
 Arguments
